Fixed bug #38132 (ReflectionClass::getStaticProperties() retains \0 in key names).